Add example of numpy finding black holes

--- a/intro_to_ndarray.slides.html
+++ b/intro_to_ndarray.slides.html
@@ -14663,7 +14663,7 @@ div.jp-OutputPrompt {
 </div>
 </div>
 </div>
-</div><div class="fragment">
+</div></section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -14675,25 +14675,19 @@ div.jp-OutputPrompt {
 </div>
 </div>
 </div>
-</div><aside class="notes">
-
+</div></section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<ul>
-<li>In 1916 Albert Einstein predicted the existence of gravitational waves</li>
-<li>100 years later their existence is confirmed by LIGO</li>
-<li>The LIGO scientists used NumPy in their discovery</li>
-</ul>
+<p><img src="images/blackhole.jpg" alt="gravitational_waves"></p>
 
 </div>
 </div>
 </div>
-</div>
-</aside></div></section><section>
+</div></section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
